@@ -35,6 +35,7 @@ export(style)
 export(tabwid)
 export(tabwidOutput)
 export(theme_booktabs)
+export(theme_box)
 export(theme_tron)
 export(theme_tron_legacy)
 export(theme_vanilla)
